--- a/双选会邀请函/css/style.css
+++ b/双选会邀请函/css/style.css
@@ -70,18 +70,19 @@ body {
     right: 5%;
     top: 5%;
     z-index: 100;
-    width: 80px;
-    height: 80px;
+    width: 30px;
+    height: 30px;
     background: rgba(0, 0, 0, 0.54);
     border-radius: 50%;
     text-align: center;
-    line-height: 105px;
     border: 3px solid rgba(76, 76, 76, 0.62);
     animation: mp3btnkey 2.5s linear infinite;
 }
-#mp3btn img {
-    width: 30px;
+#mp3btn img{
+    width: 16px;
+    height:20px;
 }
+
 @keyframes mp3btnkey {
     0%{
         transform: rotateZ(0deg);
@@ -93,16 +94,16 @@ body {
 
 /*-header-*/
 .header{
-    margin-top: 50px;
+    margin-top: 20px;
 }
 .header h2 {
     color: #ff7800;
-    font-size: 60px;
+    font-size: 26px;
 }
 
 .header h2 small {
     display: block;
-    font-size: 24px;
+    font-size: 12px;
 }
 
 /*-s1-*/
@@ -113,37 +114,42 @@ body {
 }
 
 .s1 .header {
-    margin-top: 100px;
+    margin-top: 20px;
 }
 
 .s1 .header h2 {
     color: #ffffff;
-    font-size: 60px;
+    font-size: 26px;
 }
 
 .s1 .header h2 small {
     display: block;
-    font-size: 24px;
+    font-size: 12px;
 }
 
 .s1 .text{
-    margin-top: 300px;
+    margin-top: 120px;
 }
 .s1 .text img{
     text-align: center;
-    width: 40%;
+    width: 33%;
 }
 .s1 .main {
-    margin-top: 430px;
+    margin-top: 180px;
+}
+@media (max-width: 320px) {
+    .s1 .main {
+        margin-top: 140px;
+    }
 }
 
 .s1 .main p:nth-child(1) {
-    font-size: 40px;
+    font-size: 20px;
     color: #f1f1f1;;
 }
 
 .s1 .main p:nth-child(2) {
-    font-size: 90px;
+    font-size: 40px;
     color: #ff7800;
     font-weight: 600;
     margin-top: 10px;
@@ -151,7 +157,7 @@ body {
 }
 
 .s1 .main p:nth-child(3) {
-    font-size: 30px;
+    font-size: 15px;
     color: #ffffff;
 }
 
@@ -170,37 +176,52 @@ body {
 
 .s2 .header h2 {
     color: #ffffff;
-    font-size: 60px;
-    margin-top: -500px;
+    font-size: 22px;
+    margin-top: -200px;
+}
+@media (max-width: 320px){
+    .s2 .header h2{
+        margin-top: -150px;
+    }
 }
 
 .s2 .header h2 small {
     display: block;
-    font-size: 24px;
+    font-size: 12px;
 }
 
 .s2 .main {
-    margin-top: 500px;
+    margin-top: 188px;
+}
+@media (max-width: 320px){
+    .s2 .main{
+        margin-top: 145px;
+    }
 }
 
 .s2 .main h2 {
-    font-size: 50px;
+    font-size: 25px;
     color: #ff7800;
 }
 
 .s2 .main img {
     width: 90%;
-    margin-top: -30px;
+    margin-top: -20px;
+}
+@media (max-width: 320px) {
+    .s2 .main img{
+        width: 98%;
+    }
 }
 
 .s2 .main .text {
     width: 83%;
     margin: auto;
-    margin-top: -566px;
+    margin-top: -203px;
 }
 
 .s2 .main .text p {
-    font-size: 33px;
+    font-size: 12px;
     text-align: left;
     color: #333333;
 }
@@ -210,27 +231,42 @@ body {
     width: 75%;
     background-color: #f1f1f1;
     margin: auto;
-    margin-top: 30px;
-    font-size: 33px;
-    border-radius: 40px;
+    margin-top: 15px;
+    font-size: 12px;
+    border-radius: 20px;
 }
-.s3 .main .main-5{
-    padding-bottom: 50px;
+@media (max-width: 320px){
+    .s3 .main div {
+        margin-top: 10px;
+    }
 }
 
 .s3 .main .main-1 p:nth-of-type(1),
-.s3 .main .main-3 p:nth-of-type(1),
-.s3 .main .main-5 p:nth-of-type(1){
+.s3 .main .main-3 p:nth-of-type(1){
     float: left;
     width: 13%;
-    height: 200px;
-    font-size: 50px;
-    line-height: 100px;
+    font-size: 20px;
+    line-height: 35px;
     color: #ff7800;
 }
-.s3 .main .main-3 p:nth-of-type(2){
-    line-height: 100px;
+@media (max-width: 320px){
+    .s3 .main .main-1 p:nth-of-type(1),
+    .s3 .main .main-3 p:nth-of-type(1){
+        font-size: 16px;
+    }
 }
+
+.main .main-5 p:nth-of-type(1){
+    line-height: 23px;
+    float: left;
+    width: 13%;
+    font-size: 20px;
+    color: #ff7800;
+}
+
+/*.s3 .main .main-3 p:nth-of-type(2){*/
+    /*line-height: 100px;*/
+/*}*/
 
 .s3 .main .main-1 p:nth-of-type(2),
 .s3 .main .main-3 p:nth-of-type(2),
@@ -239,21 +275,28 @@ body {
     width: 70%;
     text-align: left ;
 }
-.s3 .main .main-5 p:nth-of-type(1){
-    line-height: 60px;
-}
+/*.s3 .main .main-5 p:nth-of-type(1){*/
+    /*line-height: 60px;*/
+/*}*/
 .s3 .main .main-5 p:nth-of-type(2){
-    padding: 80px;
+    padding: 25px;
 }
 
 .s3 .main .main-2 p:nth-of-type(1),
 .s3 .main .main-4 p:nth-of-type(1){
     float: right;
     width: 13%;
-    font-size: 50px;
-    line-height: 60px;
+    font-size: 20px;
+    line-height:23px;
     color: #ff7800;
 }
+@media (max-width: 320px){
+    .s3 .main .main-2 p:nth-of-type(1),
+    .s3 .main .main-4 p:nth-of-type(1){
+        font-size: 16px;
+    }
+}
+
 .s3 .main .main-2 p:nth-of-type(2),
 .s3 .main .main-4 p:nth-of-type(2){
     float: left;
@@ -263,32 +306,64 @@ body {
 .s3 .main .main-2 p:nth-of-type(1){
     margin-top: 18px;
 }
+@media (max-width: 320px){
+    .s3 .main .main-2 p:nth-of-type(1){
+        margin-top: 10px;
+    }
+}
+
 .s3 .main .main-2 p:nth-of-type(2),
 .s3 .main .main-3 p:nth-of-type(2),
 .s3 .main .main-4 p:nth-of-type(2),
 .s3 .main .main-1 p:nth-of-type(2){
-    padding: 50px;
+    padding: 25px;
 }
+@media (max-width: 320px){
+    .s3 .main .main-2 p:nth-of-type(2),
+    .s3 .main .main-3 p:nth-of-type(2),
+    .s3 .main .main-4 p:nth-of-type(2),
+    .s3 .main .main-1 p:nth-of-type(2){
+        padding: 15px;
+    }
+}
+
 .s3 .main .main-4 p:nth-of-type(2){
-    padding-top: 70px;
+    padding-top: 30px;
 }
 
 
 /*-s4-*/
 .s4 .main{
     text-align: left;
-    font-size: 35px;
-    margin-top: 30px;
+    font-size: 14px;
+    margin-top: 15px;
 }
+@media (max-width: 320px){
+    .s4 .main{
+        font-size: 12px;
+    }
+}
+
 .s4 .main .main-1{
     width: 90%;
     background-color: #f1f1f1;
     margin: auto;
-    padding: 30px;
-    border-radius: 80px;
+    padding: 25px;
+    border-radius: 40px;
 }
+@media (max-width: 320px){
+    .s4 .main .main-1{
+        padding: 22px;
+    }
+}
+
 .s4 .main .main-1 p{
-    line-height: 60px;
+    line-height: 20px;
+}
+@media (max-width: 320px){
+    .s4 .main .main-1 p{
+        line-height: 16px;
+    }
 }
 
 
@@ -298,7 +373,7 @@ body {
 }
 .s5 .main img:nth-of-type(1){
     transform: rotate(15deg);
-    margin-top: 50px;
+    margin-top: 16px;
 }
 .s5 .main img:nth-of-type(2){
     transform: rotate(-15deg);
@@ -314,7 +389,7 @@ body {
 }
 .s6 .main img:nth-of-type(1){
     transform: rotate(-15deg);
-    margin-top: 50px;
+    margin-top: 16px;
 }
 .s6 .main img:nth-of-type(2){
     transform: rotate(15deg);
@@ -326,20 +401,20 @@ body {
 /*-s7-*/
 .s7 .main img{
     width: 80%;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 /*-s8-*/
 .s8 .main img{
     width: 88%;
-    margin-top: 30px;
+    margin-top: 15px;
 }
 
 /*-s9-*/
 .s9 .main img{
     width: 88%;
-    margin-top: 30px;
-    height: 85vh;
+    margin-top: 15px;
+    height: 80vh;
 }
 
 
@@ -348,35 +423,52 @@ body {
     width: 90%;
     background-color: #f1f1f1;
     margin: auto;
-    padding-top: 30px;
-    padding:30px 60px 70px 60px;
-    border-radius: 80px;
-    margin-top: 130px;
+    border-radius: 20px;
+    padding: 10px;
+    margin-top: 15px;
 }
 .s10 .main p{
-    margin-top: 42px;
+    margin-top: 20px;
 }
 .s10 .main input{
     width: 80%;
-    height:130px;
-    font-size: 40px;
+    height: 50px;
+    font-size: 20px;
     padding-left: 20px;
     border: 1px #ff7800 solid;
 }
+@media (max-width: 320px) {
+    .s10 .main input{
+        height: 40px;
+    }
+}
+
 .s10 .main button{
     width: 80%;
-    height: 100px;
-    font-size: 40px;
+    height: 50px;
+    font-size: 20px;
     background-color: #ff7800;
     color: #ffffff;
     border: 0;
 }
+@media (max-width: 320px){
+    .s10 .main button{
+        height: 40px;
+    }
+}
 
 .s10 .footer{
-    margin-top: 200px;
+    margin-top: 50px;
 }
+@media (max-width: 320px){
+    .s10 .footer{
+        margin-top: 10px;
+    }
+}
+
+
 .s10 .footer p{
-    font-size: 34px;
+    font-size: 16px;
     color: #ff7800;
     margin-top: 10px;
 }
@@ -386,12 +478,23 @@ body {
     width: 90%;
     background-color: #f1f1f1;
     margin: auto;
-    padding: 60px;
-    border-radius: 80px;
-    margin-top: 130px;
+    padding: 20px;
+    border-radius: 50px;
+    margin-top: 50px;
 }
+@media (max-width: 320px){
+    .s11 .main{
+        border-radius: 20px;
+    }
+}
+
 .s11 .main p{
-    line-height: 110px;
-    font-size: 40px;
+    line-height: 40px;
+    font-size: 16px;
     text-align: left;
+}
+@media (max-width: 320px) {
+    .s11 .main p{
+        line-height: 30px;
+    }
 }
