--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-html, body {
-    margin: 0;
-    padding:0;
-    height: 100%
-}
+
 
 .sky {
     background: #007fd5;
@@ -16,16 +12,15 @@ html, body {
     -ms-transform: translate3d(0, 0, 0);
     -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    background-attachment: fixed;
 }
 
 .sky .clouds_one {
-    background: url("../images/cloud_one.png");
+    background: url("../images/cloud_one.png") no-repeat;
     position: absolute;
     left: 0;
     top: 0;
     height: 100%;
-    width: 300%;
+    width: 3000%;
     -webkit-animation: cloud_one 50s linear infinite;
     -moz-animation: cloud_one 50s linear infinite;
     -o-animation: cloud_one 50s linear infinite;
@@ -42,7 +37,7 @@ html, body {
     left: 0;
     top: 0;
     height: 100%;
-    width: 300%;
+    width: 3000%;
     -webkit-animation: cloud_two 75s linear infinite;
     -moz-animation: cloud_two 75s linear infinite;
     -o-animation: cloud_two 75s linear infinite;
@@ -59,7 +54,7 @@ html, body {
     left: 0;
     top: 0;
     height: 100%;
-    width: 300%;
+    width: 3000%;
     -webkit-animation: cloud_three 100s linear infinite;
     -moz-animation: cloud_three 100s linear infinite;
     -o-animation: cloud_three 100s linear infinite;
@@ -192,7 +187,7 @@ html, body {
 img {
     width: 100%;
     height: 400px;
-    opacity: 0.1;
+    opacity: 0.7;
 }
 .col-md-4 {
     margin-top: 20px;
@@ -202,4 +197,7 @@ img {
     border: 2px #f2f2f2 solid;
     padding: 10px;
     box-shadow: 5px 5px 5px #dcdcdc;
+}
+.col-md-4 div a{
+    opacity: 0.5;
 }
